BuildHughes/translation-tool/inputs/source_meta/objects/SAPPStageIndicatorSettings__mdt.object
<CustomObject>
    <fields>
        <fullName>StageColor__c</fullName>
        <label>StageColor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Subtitle__c</fullName>
        <label>Stage Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StagesNameValue__c</fullName>
        <label>StagesNameValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StagesName__c</fullName>
        <label>StagesName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAPPStageIndicatorSettings</label>
    <pluralLabel>SAPPStageIndicatorSettings</pluralLabel>
</CustomObject>